# open3d_jetson

./: .gitignore  MANIFEST.in  README.md  flake.nix  pyproject.toml
open3d_unofficial_arm/: __init__.py  install_hook.py
run/: publish
