[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open3d-unofficial-arm"
version = "0.19.0"
description = "Universal Open3D installer: ARM wheels + fallback to official package"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Community Contributor"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
]
keywords = ["open3d", "arm", "aarch64", "3d", "point-cloud"]

[project.urls]
Homepage = "https://github.com/isl-org/Open3D"
Repository = "https://github.com/jeffhykin/open3d_jetson"

[tool.setuptools]
packages = ["open3d_unofficial_arm"]

[tool.setuptools.package-data]
open3d_unofficial_arm = ["wheels/*.whl"]

[project.scripts]
open3d-arm-setup = "open3d_unofficial_arm.install_hook:auto_install_open3d"
